@@ -5,3 +5,10 @@
 You will need at least JDK1.8 patch level 40.
 ## python脚本调用方式`
 ` -p geodetic E:\Data\CAOBAO\aaa.tif E:\Data\CAOBAO\tiles\python `
+
+## JVM参数
+```
+--add-opens
+gdal2tile.core/com.walkgis.tiles=spring.core,spring.beans
+
+```
